# sdl2_cpp_app

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: application.cpp  application.h
src/components/circle/: circle.cpp  circle.h
src/components/rect/: rectangle.cpp  rectangle.h
src/components/shape/: shape.cpp  shape.h
